Improve api docs. Fixes some problem with registrations when the ui app is cleared which may cause app stopping on incoming call. Put preference in service process.
git-svn-id: http://csipsimple.googlecode.com/svn/trunk/CSipSimple@1331 9f815046-5998-e9c0-b7e2-ac03a23edfa4